k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-indiv-ingress
  namespace: projet-indiv
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - projet-indiv.local
      secretName: projet-indiv-tls
  rules:
    - host: projet-indiv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
